# resolution

./: .gitignore  README.md
UAVFlightPlan/: CMakeLists.txt  ChangeLog  DEPENDENCIES  TODO
UAVFlightPlan/src/: CMakeLists.txt  UAVFlightPlan.cpp  UAVFlightPlan.h  UAVObstacle.cpp  UAVObstacle.h  UAVTrajectory.cpp  UAVTrajectory.h  UAVWaypoint.cpp  UAVWaypoint.h  earthlocation.cpp  earthlocation.h  general.cpp  general.h
UAVFlightPlan/src/exec/: create_obstacles.cpp  cut.cpp  distance.cpp  fp2kml.cpp  fp2qgc.cpp  kml2matlab.cpp  local2global.cpp  test_earth_location.cpp  uav2kml.cpp  uavs_sample.cpp
UAVFlightPlan/test/Datos_Localizacion/2018-09-21-ground_truth/: stats_1.txt  stats_2.txt  stats_3.txt  traj.in  (+5 more)
functions/: CMakeLists.txt  ChangeLog  README
functions/src/: .#functions.cpp.1.4  .#functions.h.1.3  Point3D.cpp  Point3D.h  RealVector.h  functions.h
functions/src/exec/: function_test.cpp  real_vector_test.cpp  translate_vector.cpp
graph/: CMakeLists.txt  README  TODO
graph/src/: SimpleGraph.h  SimpleVertex.h  test.cpp
particle_swarm/: CMakeLists.txt  ChangeLog  README  TODO  main.cpp
particle_swarm/src/: CMakeLists.txt  ParticleSwarm.cpp  ParticleSwarm.h  SwarmParticle.cpp  SwarmParticle.h
resolution/: CMakeLists.txt  ChangeLog  README  TODO  main.cpp
resolution/matlab/: box_plot_time_iteration.m  circular_plans.m  dataShow.m  dataShow_multiple_methods.m  dataShow_seconds.m  experimentShow.m  filter_sim.m  generate_secuence_figures.m  getFirstIteration.m  getFirstTime.m  getMedianTime.m  getUAVText.m  get_times_pf.m  interpol_trajectory.m  loadCosts.m  load_results_multiple_methods.m  load_results_multiple_vehicles.m  load_tests_data.m  norm_mat.m  plot_distance.m  popoutShow.m  reduce_points.m  represent_dist.m  represent_distance_time.m  represent_normal.m  represent_problem.m  represent_swarm_shot.m  setLabelStyle.m  show3Dsim.m  show3Dsim_2.m  showCost.m  showDistances.m  showDistances.m~  showDistances_simple.m  showEvolution_3D.m  showEvolution_3D_different_figures.m  showPlans.m  time_mean_iterations.m  translate_matrix.m  wp_2_uavs.m
resolution/sh/: change_extension.sh  change_manoeuvre.sh  change_names.sh  change_to_quad_model.sh  convert.sh  copia_ARCAS.sh  copia_genetics.sh  edit_tests.sh  muchos_tests.sh  sed_tests.sh  test_tune.sh  ways.sh
resolution/src/: AlgorithmConfig.cpp  AlgorithmConfig.h  CMakeLists.txt  CRAlgorithm.cpp  CRAlgorithm.h  CRAlgorithmFactory.cpp  CRAlgorithmFactory.h  CRAlgorithmStatistics.cpp  CRAlgorithmStatistics.h  CRAlgorithms.h  CRFireworks.cpp  CRFireworks.h  CRGenetics.cpp  CRGenetics.h  CRSwarm.cpp  CRSwarm.h  CostConfig.cpp  CostConfig.h  EvolutionData.h  FireworksConfig.cpp  FireworksConfig.h  FlightPlanChecker.cpp  FlightPlanChecker.h  GeneticConfig.cpp  GeneticConfig.h  SwarmConfig.cpp  SwarmConfig.h  operators.cpp  operators.h
resolution/src/exec/: edit_test.cpp  multitest.cpp  random_test_generator.cpp  test_FlightPlanChecker.cpp  test_genetics.cpp  test_objective.cpp  test_pf_icra_2011.cpp
resolution/test/: evo_fire_2.m  evo_gen_2.m  evo_swarm_2.m  fire_2  fire_2_out.m  gen_2  gen_3  gen_4  gen_5  gen_6  gen_7  gen_8  gen_8_2  multitest  multitest_corto  prueba  sol.m  sol_fire.m  sol_gen.m  swarm_2  swarm_2_50  swarm_2_out.m  swarm_3  swarm_3_50  swarm_4  swarm_4_50  swarm_5  swarm_5_50  swarm_6  swarm_6_50  swarm_7  swarm_7_50  swarm_8  swarm_8_2  swarm_8_2_min_dist  swarm_8_50  test01  test02  test03
resolution/test/MS-PSO/: Readme  best.m  best_3_n.m  catec_3_n  catec_3_n_2  evo.m_0  evo.m_1  evo.m_2  evo.m_3  evo.m_4  evo.m_5  evo.m_6  evo.m_7  evo.m_8  evo.m_9  ms_gen_2  sol_3_n.m  sol_3_n_10.m  sol_3_n_10it_2_way.m  sol_ga.m  swarm_2  swarm_2_no_ms  swarm_3  swarm_3_no_sim  traj_3_n.m
resolution/test/Tesis/: swarm_2
resolution/test/random_tests/: borra_configs.sh  gen_config_test  min_dist_test  muchos_tests.sh  multitest_random  multitest_random_gen
simulator/: CMakeLists.txt  ChangeLog  TODO
simulator/src/: CD.cpp  CD.h  CDFactory.cpp  CDFactory.h  CDs.h  CMakeLists.txt  Controller.cpp  Controller.h  ControllerFactory.cpp  ControllerFactory.h  ControllerQuad.cpp  ControllerQuad.h  ControllerQuadCatec.cpp  ControllerQuadCatec.h  ControllerQuadCatecEasy.cpp  ControllerQuadCatecEasy.h  ControllerSimple.cpp  ControllerSimple.h  ControllerSimpleGlider.cpp  ControllerSimpleGlider.h  ControllerSimpleUAV.cpp  ControllerSimpleUAV.h  Controllers.h  FlightPlan.cpp  FlightPlan.h  Model.cpp  Model.h  ModelFactory.cpp  ModelFactory.h  ModelQuad.cpp  ModelQuad.h  ModelQuadCatec.cpp  ModelQuadCatec.h  ModelSimpleGlider.cpp  ModelSimpleGlider.h  ModelSimpleQuad.cpp  ModelSimpleQuad.h  ModelSimpleUAV.cpp  ModelSimpleUAV.h  ModelSimpleUAVPolarWind.cpp  (+36 more)
simulator/src/exec/: test_CD.cpp  test_FlightPlan.cpp  test_Range.cpp  test_particle_filter.cpp  test_simulator.cpp
simulator/tests/: controller.in  controller_2.in  model.in  model_2.in  particle.in  particle_2.in  pf_1.in  pf_2.in  pf_3.in  simulator.in  simulator_10.in  simulator_11.in  simulator_12.in  simulator_13.in  simulator_14.in  simulator_2.in  simulator_3.in  simulator_4.in  simulator_5.in  simulator_6.in  simulator_7.in  simulator_8.in  simulator_9.in  test_montecarlo_1.in  test_montecarlo_2.in  traj.m
simulator/tests/CD/: geometry  geometry2  position0  position1  position2  position3  position4
simulator/tests/Catec/: catec  catec_complete  catec_sol  simulator.in  simulator_2.in  simulator_3.in  simulator_complete.in  simulator_complete_easy.in  simulator_prueba.in  swarm_2_complete  swarm_2_complete_one_three  swarm_2_complete_sim  swarm_3_complete  swarm_3_complete_diff_altitude  traj_1_wp  traj_1_wp_complete  traj_2_wp  traj_2_wp_complete  traj_2_wp_complete_mod  traj_3_wp  traj_3_wp_complete_mod  traj_3_wp_complete_mod_diff_altitude
simulator/tests/FlightPlan/: fp_1.in  fp_2.in  fp_2_b.in  fp_3.in  fp_4.in  ref.m  ref_1.m  ref_2.m  ref_2_b.m  ref_3.m  ref_4.m
sparser/: CMakeLists.txt  ChangeLog  Makefile  Version
sparser/src/: CMakeLists.txt  Checker.cpp  Checker.h  ParseBlock.cpp  ParseBlock.h  main.cpp  polo
(+25491 files in other folders)
